--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AHeros:build"
+            "browserTarget": "AHeros:build",
+            "proxyConfig": "proxy.config.json",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
